--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
             <version>7.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.32</version>
+        </dependency>
+
     </dependencies>
 
 </project>
